Initial Author route

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <%- body %>
+    <%- include('../partials/header') %>
+        <%- include('../partials/errorMessage') %>
+            <%- body %>
 </body>
 
 </html>
