Books Create/index/New

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,10 +3,10 @@
         <a href="/">Briery</a>
         <ul>
             <li>
-                <a href="#">Books</a>
+                <a href="/books">Books</a>
             </li>
             <li>
-                <a href="#">Add Book</a>
+                <a href="/books/new">Add Book</a>
             </li>
             <li>
                 <a href="/authors">Authors</a>
